scribble-test/src/test/resources/good/syntax/disamb/imports/Import03.scr
module good.syntax.disamb.imports.Import03;


import good.syntax.disamb.imports.pack1.Import02b;


global protocol Foo(role A, role B)
{
	1() from A to B;
	do good.syntax.disamb.imports.pack1.Import02b.Bar(A, B);
	2() from A to B;
}

